# ARTrade

./: .gitmodules  README.md  compile.sh  ipcrm.sh
Bybit/: CMakeLists.txt  main.cpp
Bybit/include/: bybit.h  bybit_market.h
Bybit/src/: bybit.cpp  bybit_market.cpp
bybit/: CMakeLists.txt  main.cpp
bybit/config/: app.json  error.json
bybit/include/: bybit.h  bybit_market.h  bybit_trade.h  format.hpp  signature.hpp
bybit/src/: bybit.cpp  bybit_market.cpp  bybit_trade.cpp
core/: CMakeLists.txt
core/include/: config.h  config.hpp  datas.h  files.hpp  market.h  modules.h  test.h  trade.h  util.hpp  ws_client.h  ws_event.h  ws_server.h
core/include/core/: config.h  datas.hpp  http_client.h  http_server.h  market.h  message.hpp  modules.h  order.hpp  orderbook.hpp  pimpl.h  sharememory.h  sharememory.hpp  time.hpp  trade.h  util.h  util.hpp  ws_client.h  ws_server.h
core/include/core/http/: client.h  server.h  util.hpp
core/include/core/message/: message.hpp  mmap.hpp
core/src/: config.cpp  http_client.cpp  http_server.cpp  market.cpp  modules.cpp  sharememory.cpp  test.cpp  trade.cpp  util.cpp  ws_client.cpp  ws_server.cpp
core/unit/: message.cpp  test.cpp  test_message.cpp  test_orderbook.cpp
demo/: CMakeLists.txt  main.cpp
demo/include/: binance.h  binance_market.h
demo/src/: binance.cpp  binance_market.cpp
exchange/crypto/bybit/: CMakeLists.txt
exchange/crypto/bybit/config/: app.json
exchange/crypto/bybit/include/: bybit_market.h  bybit_trade.h  format.hpp
exchange/crypto/bybit/src/: bybit.cpp  bybit_market.cpp  bybit_trade.cpp
exchange/finance/feishu/: CMakeLists.txt  README.md  main.cpp
exchange/finance/feishu/include/: mouse.h  mouse_market.h
exchange/finance/feishu/sdk/include/: SgitFtdcMdApi.h  SgitFtdcTraderApi.h  SgitFtdcUserApiDataType.h  SgitFtdcUserApiStruct.h
exchange/finance/feishu/src/: mouse_market.cpp
language/: Arabic.md  Chinese.md  Korean.md
sge/: CMakeLists.txt  sge
sge/include/: mouse_market.h
sge/src/: mouse.cpp
strategy/: CMakeLists.txt  main.cpp
strategy/CppApi/: demo.cpp  strategy.hpp
strategy/CppApi/include/: busy_loop.h
strategy/CppApi/src/: strategy.cpp
strategy/PythonApi/: demo.py  pystrategy.cpp  setup.py
strategy/PythonApi/pycore/: pybind_datas.cpp
strategy/PythonApi/pystrategy/: __init__.py  pybind_strategy.cpp
strategy/RustApi/: Cargo.toml  build.rs
strategy/RustApi/src/: main.rs  strategy.rs  test.hpp
strategy/include/: busy_loop.h  datas.hpp
strategy/pystrategy/: pybind_strategy.cpp
strategy/src/: busy_loop.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
